--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
-baseurl: "/telecombcn-2016-dlcv" # the subpath of your site, e.g. /blog/
-url: "http://imatge-upc.github.io" # the base hostname & protocol for your site
+baseurl: "/2017-dlcv/" # the subpath of your site, e.g. /blog/
+url: "http://telecombcn-dl.github.io" # the base hostname & protocol for your site
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
@@ -8,7 +8,7 @@ theme_settings:
   title: Deep Learning for Computer Vision Barcelona
   avatar:
   gravatar: # Email MD5 hash
-  description: "Summer Seminar ETSETB TelecomBCN, 4-8 July 2016" # used by search engines
+  description: "Summer Seminar ETSETB TelecomBCN, 21-27 June 2017" # used by search engines
 
   # Header and footer text
   header_text:
@@ -23,7 +23,7 @@ theme_settings:
   dribbble:
   facebook:
   flickr:
-  github: "imatge-upc/telecombcn-2016-dlcv"
+  github: "telecombcn-dl/2017-dlcv"
   google_plus:
   instagram:
   linkedin:  # Full URL
